syntax = "proto3";

package voting.record;

option go_package = "voting";

import "google/protobuf/empty.proto";
import "models.proto";

message VotingRecord {
    string Id = 1;
    int64 Sequence = 2;
    voting.models.Vote Vote = 3;
}

message GetPollsResponse {
    bool Error = 1;
    repeated voting.models.Poll Polls = 2;
}

message RecordVoteResponse {
    bool Error = 1;
    string ErrorMessage = 2;
}

message StreamRecordsRequest {
    int64 StartSequence = 1;
}

message AddPollResponse {
    bool Error = 1;
    voting.models.Poll Poll = 2;
}

service RecordingService {
    rpc AddPoll(voting.models.Poll) returns (AddPollResponse);
    rpc GetPolls(google.protobuf.Empty) returns (GetPollsResponse);
    rpc RecordVote(voting.models.Vote) returns (RecordVoteResponse);
    rpc StreamRecords (StreamRecordsRequest) returns (stream VotingRecord);
}
